tests/neg/i7529.scala
extension [A](a: A)

  @nonsense    // error: not found: nonsense
  def foo = ???